resolve dagge hilt issue

--- a/app/src/main/res/layout/activity_image_generate.xml
+++ b/app/src/main/res/layout/activity_image_generate.xml
@@ -2,18 +2,34 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayoutParent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.ImageGenerateActivity">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Generate Dog Images"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintBaseline_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/iv_dogImg" />
+        app:layout_constraintBottom_toTopOf="@+id/iv_dogImg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txt_res"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="res"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_generate_dogs"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_dogImg" />
 
     <ImageView
         android:id="@+id/iv_dogImg"
@@ -27,6 +43,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/btn_generate_dogs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_corner_style"
@@ -38,5 +55,13 @@
         app:layout_constraintTop_toBottomOf="@+id/iv_dogImg"
         app:layout_constraintVertical_bias="0.23" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/txt_res"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/txt_res"
+        app:layout_constraintTop_toTopOf="@+id/txt_res" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
