--- a/app/src/main/res/layout/activity_image_generate.xml
+++ b/app/src/main/res/layout/activity_image_generate.xml
@@ -59,6 +59,7 @@
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/txt_res"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/txt_res"
