--- a/app/src/main/res/layout/activity_image_generate.xml
+++ b/app/src/main/res/layout/activity_image_generate.xml
@@ -57,12 +57,13 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="93dp"
+        android:layout_height="108dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/txt_res"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/txt_res"
-        app:layout_constraintTop_toTopOf="@+id/txt_res" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.721" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
